--- a/BackEnd/src/main/resources/application.properties
+++ b/BackEnd/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 entity.package.name=lk.ijse.spring.entity
-my.app.url=jdbc:mysql://localhost:3306/Market?createDatabaseIfNotExist=true
+my.app.url=jdbc:mysql://localhost:3306/SpringMarket?createDatabaseIfNotExist=true
 my.app.username=root
 my.app.password=root1234
 my.app.driverclassname=com.mysql.jdbc.Driver
